[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/shotLarge.png" type="Texture" id=1]
[ext_resource path="res://src/Weapons/Weapon.gd" type="Script" id=2]
[ext_resource path="res://src/Weapons/Bullet.tscn" type="PackedScene" id=3]

[sub_resource type="Animation" id=1]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("MuzzleFlash:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MuzzleFlash:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.571114, 0.571114 ), Vector2( 0.323, 0.741 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MuzzleFlash:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 7.01152, -4.42151e-08 ), Vector2( 9.13573, -1.37067e-07 ) ]
}

[node name="Weapon" type="Node2D"]
script = ExtResource( 2 )
Bullet = ExtResource( 3 )

[node name="EndOfGun" type="Position2D" parent="."]
position = Vector2( 3, 0 )

[node name="ShootCooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="MuzzleFlash" type="Sprite" parent="."]
visible = false
position = Vector2( 7.01152, -4.42151e-08 )
rotation = -1.5708
scale = Vector2( 0.571114, 0.571114 )
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/MuzzleFlash = SubResource( 1 )
